Implemented transactions. Some bugs are to be fixed
